--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@swimlane/ngx-charts": "^20.1.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.6.0",
+    "ng-apexcharts": "^1.7.1",
     "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
